--- a/index.html
+++ b/index.html
@@ -24,6 +24,30 @@
     <h3>carta2</h3>
     <p>parrafo2</p>
   </div>
+
+  <h3 id="h3-titulo">Aprendiendo a manipular el DOM</h3>
+
+  <div id="count">
+    <h2>€<span>0</span></h2>
+    <button id="increment">Incrementar</button>
+  </div>
+
+  <br>
+  
+  <button id="delete-btn">Borrame!</button>
+
+  <br>
+  <br>
+
+  <div id="add-form">
+    <input id="name" type="text" value="valor inicial" />
+    <button>Añadir</button>
+
+    <h3>Lista:</h3>
+    <ul id="add-list">
+
+    </ul>
+  </div>
   
   <script src="./script.js"></script>
 
