--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -48,6 +49,14 @@
 
     </ul>
   </div>
+
+  <section id="final-section" class="container blue-container">
+    <h2>Manipulando ids y clases!</h2>
+  </section>
+
+  <h2 id="event-title">Cambiando estilos!</h2>
+
+  <button id="styles-btn">Click me</button>
   
   <script src="./script.js"></script>
 
